[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-explain-preprocess"
version = "0.1.0"
description = "An explainable preprocessing package for ML data preparation with reports."
authors = [{name = "Rishee Panchal", email = "backpropnomad@gmail.com"}]
license = {text = "MIT"}
readme = "README.py"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>>=1.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating system :: OS Independent",
    "Topic :: Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/risheeee/ml-explain-preprocess.git"